...

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/lets_go_button"
            android:onClick="onLetsGoClicked"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#2D94FA"
            android:text="@string/login_go"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/no_account_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onCreateAccountButton"
            android:text="@string/login_noAccount"
            android:textAllCaps="false"
...
